fixed alignment on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,10 @@ li.nav-item a{
 	text-decoration: underline;
 }
 
+.eduDetailText{
+	text-align: left;
+}
+
 .footer{
 	color: #ffffff;
 	min-height: 250px;
@@ -315,6 +319,14 @@ li.nav-item a{
 
 	.resume a{
 		font-size: 1.4rem;
+	}
+
+	.socialMedia{
+		font-size: 0.8rem;
+	}
+
+	.eduDetailText{
+		text-align: center;
 	}
 }
 
